refactor: jdk 버전 변경에 따른 코드 변경